Fix a README typo

--- a/README.html
+++ b/README.html
@@ -8,7 +8,7 @@ images from image posts. An index links to monthly pages, which contain
 all the posts from the respective month, plus links to single post pages.
 There are many options to select the posts to backup.</p>
 
-<p>You can see en example of <code>tumblr_backup</code>’s output
+<p>You can see an example of <code>tumblr_backup</code>’s output
 <a href="http://drbeat.li/tumblr">on my home page</a>.</p>
 
 <h2>1. Installation</h2>
