--- a/README.html
+++ b/README.html
@@ -47,7 +47,7 @@
 
   <h3>2.1. Synopsis</h3>
   <pre>
-<code>tumblr_backup.py [-q] [-i] [-n post-count] [-s start-post] [-p y|m|d|YYYY[MM[DD]]] [-t] [blog-name] ...
+<code>tumblr_backup.py [-qixt] [-n post-count] [-s start-post] [-p y|m|d|YYYY[MM[DD]]] [blog-name] ...
 </code>
 </pre>
 
@@ -57,6 +57,10 @@
     <li><code>-q</code>: Suppress the progress display.</li>
 
     <li><code>-i</code>: Incremental backup.</li>
+
+    <li><code>-x</code>: XML backup.</li>
+
+    <li><code>-t</code>: Include the theme in the backup.</li>
 
     <li><code>-n</code> <em>post-count</em>: Stop backing up after
     <em>post-count</em> posts.</li>
@@ -82,8 +86,6 @@
         <li><em>yyyy-mm-dd</em>: the given day</li>
       </ul>
     </li>
-
-    <li><code>-t</code>: Include the theme in the backup</li>
   </ul>
 
   <h3>2.3. Arguments</h3>
@@ -121,6 +123,9 @@
         images/
             &lt;image.ext&gt; - the image files
             …
+        xml/
+            &lt;id&gt;.xml - the raw XML posts
+            …
         theme/
             _local.css - the local style sheet
             theme.html - the saved HTML template
@@ -143,8 +148,12 @@
   image.</p>
 
   <p>In incremental backup mode, <code>tumblr_backup</code> saves
-  only posts that have higher ids than the highest id in the
-  <code>posts</code> folder. No index files are updated.</p>
+  only posts that have higher ids than the highest id saved yet. No
+  index files are updated.</p>
+
+  <p>In XML backup mode, the original XML source returned by the
+  Tumblr API is saved. Images are not downloaded, and no index
+  files are updated.</p>
 
   <p>In order to limit the set of backed up posts, use the
   <code>-n</code> and <code>-s</code> options. The most recent post
